--- a/APM-WithRefresh/package.json
+++ b/APM-WithRefresh/package.json
@@ -32,19 +32,19 @@
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "latest",
+    "@types/jasminewd2": "latest",
     "@types/node": "~8.9.4",
     "angular-in-memory-web-api": "^0.7.0",
     "chai": "^4.2.0",
     "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "latest",
+    "jasmine-spec-reporter": "latest",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "latest",
+    "karma-jasmine-html-reporter": "latest",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
